Hide hero title and loading

--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -10,7 +10,8 @@
 
 .hero__title {
   font-family: 'Source Serif Pro', serif;
-  font-size: 5.6rem;
+  font-size: 12.4rem;
+  letter-spacing: -4px;
   margin: 0;
   position: relative;
 }
@@ -18,8 +19,8 @@
 .hero__loading {
   bottom: -120px;
   position: absolute;
-  right: -420px;
+  right: -520px;
   transform-origin: bottom;
   transform: rotate(-29deg);
-  width: 800px;
+  width: 1200px;
 }
